RESOLVED FIXED176004
Fix incorrect enum in atBoundaryOfGranularity call
https://bugs.webkit.org/show_bug.cgi?id=176004
Summary Fix incorrect enum in atBoundaryOfGranularity call
Megan Gardner
Reported 2017-08-25 17:52:31 PDT
Fix incorrect enum in atBoundaryOfGranularity call
Attachments
Patch (2.02 KB, patch)
2017-08-25 18:03 PDT, Megan Gardner
wenson_hsieh: review+
Megan Gardner
Comment 1 2017-08-25 18:03:34 PDT
Wenson Hsieh
Comment 2 2017-08-26 00:46:42 PDT
Comment on attachment 319123 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=319123&action=review Nice find! r=me (though, this might still need a WK2R?) > Source/WebKit/ChangeLog:6 > + Enum that was being used was incorrect, as that case in not covered in called function. The ChangeLog description should go under the "Reviewed by" line. (also, it looks like you meant "is not covered" instead of "in not covered"). > Source/WebKit/ChangeLog:7 > + Resulted in a no-op, expected behavior will happen now. I think a sentence or two describing the "expected behavior" here would be helpful. What change in behavior did you observe after making this tweak?
Megan Gardner
Comment 3 2017-08-28 16:56:51 PDT
Radar WebKit Bug Importer
Comment 4 2017-08-28 16:57:46 PDT
Note You need to log in before you can comment on or make changes to this bug.