Fix incorrect enum in atBoundaryOfGranularity call https://bugs.webkit.org/show_bug.cgi?id=176004

Reviewed by Wenson Hsieh and Enrica Casucci

Enum that was being used was incorrect, as that case in not covered in called function.
Resulted in a no-op. Should now have correct behavior around line boundaries.

Not possible to add tests for selections with velocity. Will attempt to add this behavior later.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::rangeAtWordBoundaryForPosition):



Canonical link: https://commits.webkit.org/192711@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221281 268f45cc-cd09-0410-ab3c-d52691b4dbfc